# archive

./: README.md
2o2-Discord-Bot/: README.md  config.json  index.js  package.json  runner.js
2o2-Discord-Bot/assets/: nameBlacklist.json  setup.psql
2o2-Discord-Bot/commands/: coincidence.js  demotivator.js  disrep.js  disrep_slash.js  ditter.js  feedback.js  globalkarma.js  karma.js  karma_slash.js  latex.js  profile.js  rep.js  rep_slash.js  test.js  top.js  uncanny.js  weather.js
2o2-Discord-Bot/core/: BaseCommand.js  Client.js  Database.js  Internal.js  Util.js
2o2-Discord-Bot/locale/: ru.yaml
2o2-Discord-Bot/modules/: Ditters.js  EvalCommand.js  Events.js  ImageUtils.js  Karma.js  Menu.js
45System/: README.md  config.json  index.js  package.json  runner.js  setup.psql
45System/core/: Bot.js  CommandHandler.js  Database.js  Locales.js
45System/ext/: baseCommands.js  debugCommands.js  economy.js  events.js  (+2 more)
CBot-Discord-Bot/: README.md  main.py
Cr5 Discord Bot/: README.md  main.py  requirements.txt  setup.psql
DUtilsP/: README.md  config.json  index.js  package.json  runner.js
typical-language/: Cargo.toml  LICENSE  README.md
typical-language/benches/: lexer_benchmark.rs
typical-language/example/: const.src  errors.src  extend.src  helloworld.src  pipeOperator.src  templates.src  types.src  yield.src
typical-language/example/exampleModule/: greeter.src  main.src
typical-language/src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  rules.rs
typical-language/test/: main.src
xchat/: README.md  api.js  index.js  package.json  setup.psql
(+165 files in other folders)
